add new item for main menu

--- a/app/sass/global/variables.scss
+++ b/app/sass/global/variables.scss
@@ -40,10 +40,12 @@ $theme-1: #9bc045;
 $theme-2:  #3180CA;
 $theme-3:  #C93E7F;
 $theme-4: #D0724E;
+$theme-5: #FF4118;
 
 $theme-colors: (
 	theme-green: #9bc045,
 	theme-blue: #3180CA,
 	theme-pink: #C93E7F,
-	theme-brown: #D0724E
+	theme-brown: #D0724E,
+	theme-orange: #FF4118
 );
