--- a/app/templates/includes/header/main-nav.twig
+++ b/app/templates/includes/header/main-nav.twig
@@ -1,4 +1,3 @@
-
 <!-- begin nav -->
 <nav class="nav">
 	<div class="uk-container">
@@ -21,17 +20,18 @@
 				</span>
 			</li>
 			<li>
-				<a href="junior.html">
-					<img width="92px" height="55px" data-src="img/icon-svg/nav-ellipse-3.svg" alt="" uk-img>
-					<span>Junior</span>
-				</a>
-			</li>
-			<li>
 				<a href="nov.html">
 					<img width="161px" height="56px" data-src="img/icon-svg/nav-ellipse-4.svg" alt="" uk-img>
 					<span>Сельская новь</span>
 				</a>
 			</li>
+			<li>
+				<a href="junior.html">
+					<img width="92px" height="55px" data-src="img/icon-svg/nav-ellipse-5.svg" alt="" uk-img>
+					<span>Мясо кур</span>
+				</a>
+			</li>
 		</ul>
 	</div>
-</nav><!-- end nav -->
+</nav>
+<!-- end nav -->
