--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1467,6 +1467,34 @@ body.theme-brown .main-nav li:hover span {
   color: #ffffff;
 }
 
+body.theme-orange .advantages-list li:before {
+  color: #FF4118;
+}
+
+body.theme-orange .advantage-item__link {
+  color: #FF4118;
+}
+
+body.theme-orange .adv-bg-img {
+  color: #FF4118;
+}
+
+body.theme-orange .main-nav li.active svg {
+  color: #FF4118;
+}
+
+body.theme-orange .main-nav li.active span {
+  color: #ffffff;
+}
+
+body.theme-orange .main-nav li:hover svg {
+  color: #FF4118;
+}
+
+body.theme-orange .main-nav li:hover span {
+  color: #ffffff;
+}
+
 body.is-loaded .main-nav li a img[src*="img/icon-svg"] {
   display: block;
 }
@@ -1901,7 +1929,6 @@ nav.nav {
   -ms-flex-order: 3;
   order: 3;
   width: 32.3333%;
-  visibility: hidden;
 }
 
 .main-nav li:nth-child(5) {
@@ -5867,20 +5894,20 @@ main.main-container {
   }
 
   .main-nav li:nth-child(4) {
-    -webkit-box-ordinal-group: 6;
-    -webkit-order: 5;
-    -moz-box-ordinal-group: 6;
-    -ms-flex-order: 5;
-    order: 5;
-    width: auto;
-  }
-
-  .main-nav li:nth-child(5) {
     -webkit-box-ordinal-group: 5;
     -webkit-order: 4;
     -moz-box-ordinal-group: 5;
     -ms-flex-order: 4;
     order: 4;
+    width: auto;
+  }
+
+  .main-nav li:nth-child(5) {
+    -webkit-box-ordinal-group: 6;
+    -webkit-order: 5;
+    -moz-box-ordinal-group: 6;
+    -ms-flex-order: 5;
+    order: 5;
     width: auto;
   }
 
